--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: "PolyDiffuse: Polygonal Shape Reconstruction via Guided Set Diffusion Models"
+title: "LithoSim: A Large, Holistic Lithography Simulation Benchmark for AI-Driven Semiconductor Manufacturing"
 description: 
 show_downloads: false
 google_analytics:
