--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: "LithoSim: A Large, Holistic Lithography Simulation Benchmark for AI-Driven Semiconductor Manufacturing"
+title: "Hongquan He"
 description: 
 show_downloads: false
 google_analytics:
